--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,44 +5,4 @@ on:
 
 jobs:
   update:
-    name: "Update"
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    steps:
-      - name: Generate app token
-        id: token
-        uses: tibdex/github-app-token@7ce9ffdcdeb2ba82b01b51d6584a6a85872336d4 # v1.5.1
-        with:
-          app_id: ${{ secrets.UPDATE_GITHUB_APP_ID }}
-          installation_id: ${{ secrets.UPDATE_GITHUB_APP_INSTALLATION_ID }}
-          private_key: ${{ secrets.UPDATE_GITHUB_APP_PEM_FILE }}
-      - name: Checkout GitHub Management template
-        uses: actions/checkout@v2
-        with:
-          repository: galargh/github-mgmt-template
-          path: github-mgmt-template
-      - name: Checkout GitHub Management
-        uses: actions/checkout@v2
-        with:
-          path: github-mgmt
-          token: ${{ steps.token.outputs.token }}
-      - name: Copy files from the template
-        run: |
-          for file in $(git ls-files .github scripts terraform .gitignore ':!:terraform/*_override.tf' ':!:.github/workflows/*_reusable.yml'); do
-            mkdir -p "../github-mgmt/$(dirname "$file")"
-            cp -f "$file" "../github-mgmt/$file"
-          done
-        working-directory: github-mgmt-template
-      - uses: ./github-mgmt-template/.github/actions/git-config-user
-      - run: |
-          git add --all
-          git diff-index --quiet HEAD || git commit --message='update (#${{ github.run_number }})'
-        working-directory: github-mgmt
-      - uses: ./github-mgmt-template/.github/actions/git-push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          suffix: update
-          working-directory: github-mgmt
+    uses: protocol/github-mgmt-template/.github/workflows/update_reusable.yml@master
