--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,6 +7,6 @@ jobs:
   update:
     uses: galargh/github-mgmt-template/.github/workflows/update_reusable.yml@master
     secrets:
-      UPDATE_GITHUB_APP_ID: ${{ secrets.UPDATE_GITHUB_APP_ID }}
-      UPDATE_GITHUB_APP_INSTALLATION_ID: ${{ secrets.UPDATE_GITHUB_APP_INSTALLATION_ID }}
-      UPDATE_GITHUB_APP_PEM_FILE: ${{ secrets.UPDATE_GITHUB_APP_PEM_FILE }}
+      GITHUB_APP_ID: ${{ secrets.UPDATE_GITHUB_APP_ID }}
+      GITHUB_APP_INSTALLATION_ID: ${{ secrets.UPDATE_GITHUB_APP_INSTALLATION_ID }}
+      GITHUB_APP_PEM_FILE: ${{ secrets.UPDATE_GITHUB_APP_PEM_FILE }}
