--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,8 +5,8 @@ on:
 
 jobs:
   update:
-    uses: galargh/github-mgmt-template/.github/workflows/update_reusable.yml@master
+    uses: protocol/github-mgmt-template/.github/workflows/update_reusable.yml@master
     secrets:
-      GITHUB_APP_ID: ${{ secrets.UPDATE_GITHUB_APP_ID }}
-      GITHUB_APP_INSTALLATION_ID: ${{ secrets.UPDATE_GITHUB_APP_INSTALLATION_ID }}
-      GITHUB_APP_PEM_FILE: ${{ secrets.UPDATE_GITHUB_APP_PEM_FILE }}
+      GITHUB_APP_ID: ${{ secrets.GH_RW_GITHUB_APP_ID }}
+      GITHUB_APP_INSTALLATION_ID: ${{ secrets.GH_RW_GITHUB_APP_INSTALLATION_ID }}
+      GITHUB_APP_PEM_FILE: ${{ secrets.GH_RW_GITHUB_APP_PEM_FILE }}
