--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -99,6 +99,8 @@ jobs:
   comment:
     needs: [prepare, plan]
     if: github.event_name == 'pull_request_target'
+    permissions:
+      pull-requests: write
     name: "Comment"
     runs-on: ubuntu-latest
     env:
