--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,7 +1,4 @@
-name: "Sync"
-
-permissions:
-  contents: write
+name: Sync
 
 on:
   workflow_dispatch:
@@ -16,7 +13,7 @@ on:
 
 jobs:
   prepare:
-    name: "Prepare"
+    name: Prepare
     runs-on: ubuntu-latest
     outputs:
       workspaces: ${{ steps.workspaces.outputs.this }}
@@ -38,11 +35,13 @@ jobs:
   sync:
     needs: [prepare]
     if: needs.prepare.outputs.workspaces != ''
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
         workspace: ${{ fromJson(needs.prepare.outputs.workspaces) }}
-    name: "Sync"
+    name: Sync
     runs-on: ubuntu-latest
     env:
       TF_IN_AUTOMATION: 1
@@ -87,7 +86,7 @@ jobs:
   pull_request:
     needs: [prepare, sync]
     if: needs.prepare.outputs.workspaces != ''
-    name: "Pull request"
+    name: Pull request
     runs-on: ubuntu-latest
     defaults:
       run:
