--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,14 +1,23 @@
-name: "Pull Request"
+name: Plan
 
 on:
-  pull_request_target:
+  workflow_run:
+    workflows:
+      - Pull Request
+    types:
+      - completed
   workflow_dispatch:
 
 jobs:
   prepare:
-    if: github.ref_name == github.event.repository.default_branch &&
-        github.event.repository.is_template == false
-    name: "Prepare"
+    if: (github.event_name == 'workflow_dispatch' &&
+        github.ref_name == github.event.repository.default_branch &&
+        github.event.repository.is_template == false) ||
+        (github.event_name == 'workflow_run' &&
+        github.event.workflow_run.conclusion == 'success')
+    permissions:
+      pull-requests: write
+    name: Prepare
     runs-on: ubuntu-latest
     outputs:
       workspaces: ${{ steps.workspaces.outputs.this }}
@@ -24,12 +33,15 @@ jobs:
           if [[ '${{ github.event_name }}' == 'workflow_dispatch' ]]; then
             repository='${{ github.repository }}'
             sha='${{ github.sha }}'
-          else
-            repository='${{ github.event.pull_request.head.repo.full_name }}'
-            sha='${{ github.event.pull_request.head.sha }}'
+          elif [[ '${{ github.event_name }}' == 'workflow_run' ]]
+            repository='${{ github.event.workflow_run.head_repository.full_name }}'
+            sha='${{ github.event.workflow_run.head_commit.id }}'
           fi
           echo "::set-output name=repository::$repository"
           echo "::set-output name=sha::$sha"
+      - env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh api 'repos/${{ steps.github.outputs.repository }}/statuses/${{ steps.github.outputs.sha }}' -f status='pending' -f context='Plan' -f target_url='${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
       - name: Checkout
         uses: actions/checkout@v2
         with:
@@ -45,7 +57,7 @@ jobs:
       fail-fast: false
       matrix:
         workspace: ${{ fromJson(needs.prepare.outputs.workspaces) }}
-    name: "Plan"
+    name: Plan
     runs-on: ubuntu-latest
     env:
       TF_IN_AUTOMATION: 1
@@ -74,7 +86,7 @@ jobs:
       - name: Initialize terraform
         run: terraform init
       - name: Check terraform lock
-        if: github.event_name == 'pull_request_target'
+        if: github.event_name == 'workflow_run'
         run: git diff --exit-code .terraform.lock.hcl
       - name: Format terraform
         run: terraform fmt -check
@@ -96,10 +108,10 @@ jobs:
           retention-days: 90
   comment:
     needs: [prepare, plan]
-    if: github.event_name == 'pull_request_target'
+    if: github.event_name == 'workflow_run'
     permissions:
       pull-requests: write
-    name: "Comment"
+    name: Comment
     runs-on: ubuntu-latest
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.TF_RO_AWS_ACCESS_KEY_ID }}
@@ -141,7 +153,7 @@ jobs:
       - name: Comment on pull request
         uses: marocchino/sticky-pull-request-comment@39c5b5dc7717447d0cba270cd115037d32d28443 # v2.2.0
         with:
-          number: ${{ github.event.pull_request.number }}
+          number: ${{ github.event.workflow_run.pull_requests[0].number }}
           message: |
             Before merge, verify that all the following plans are correct. They will be applied as-is after the merge.
 
